# bazel-query-guide-example

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  go.mod  go.sum
.buildkite/: pipeline.yml
.buildkite/hooks/: post-checkout
config/: BUILD.bazel
lib/config/: BUILD.bazel  reader.go  reader_test.go
lib/logging/: BUILD.bazel  logger.go  logger_test.go
lib/metrics/: BUILD.bazel  collector.go  collector_test.go
lib/tracing/: BUILD.bazel  datadog.go  jaeger.go
services/auth/: BUILD.bazel  auth_test.go  handlers.go  service.go
services/payment/: BUILD.bazel  handlers.go  payment_test.go  postgres.go  service.go
services/payment/db/: BUILD.bazel  interface.go
services/user/: BUILD.bazel  handlers.go  service.go  uesr_test.go
