module(
    name = "bazel_query_example",
    version = "0.1.0",
)

bazel_dep(name = "rules_go", version = "0.53.0")
bazel_dep(name = "gazelle", version = "0.42.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_lib_pq",
    "com_github_prometheus_client_golang",
    "org_golang_x_net",
)