load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "metrics",
    srcs = ["collector.go"],
    importpath = "bazel_query_example/lib/metrics",
    visibility = ["//visibility:public"],
    deps = ["@com_github_prometheus_client_golang//prometheus"],
)

go_test(
    name = "metrics_test",
    srcs = ["collector_test.go"],
    embed = [":metrics"],
    deps = ["@com_github_prometheus_client_golang//prometheus"],
)
