load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "auth_lib",
    srcs = [
        "handlers.go",
        "service.go",
    ],
    importpath = "bazel_query_example/services/auth",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/config",
        "//lib/logging",
        "//lib/metrics",
    ],
)

go_binary(
    name = "auth",
    embed = [":auth_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "auth_test",
    srcs = ["auth_test.go"],
    embed = [":auth_lib"],
    deps = [
        "//lib/logging",
        "//lib/metrics",
    ],
)
